<resources>
    <string name="app_name">English BCC</string>
    <string name="nametopic1">MÓN ĂN VÀ THỨC UỐNG</string>
    <string name="nametopic2">THỂ THAO</string>
    <string name="nametopic3">DU LỊCH</string>
    <string name="nametopic4">GIA ĐÌNH</string>
    <string name="nametopic5">MÀU SẮC</string>
    <string name="nametopic6">HOẠT ĐỘNG HẰNG NGÀY</string>
    <string name="nametopic7">THỜI TRANG</string>
    <string name="nametopic8">PHƯƠNG TIỆN GIAO THÔNG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textview">TextView</string>
    <string name="title_activity_theme1">Theme1Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tiếng Anh BCC</string>
    <string name="nav_header_subtitle">tienganhbcc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_grammar">Ngữ pháp</string>
    <string name="menu_favorite">Yêu thích</string>
    <string name="menu_history">Lịch sử xem</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_playlist">Danh sách phát</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_rate">Đánh giá</string>
    <string name="menu_info">Thông tin</string>
    <string name="menu_note">Ghi chú</string>
    <string name="menu_excercise">Bài tập</string>

    <!--    Main activity-->
    <string name="listvideo">DANH SÁCH VIDEO</string>

    <!--    Play Actitivy-->
    <string name="nhapghichu">Nhập ghi chú</string>
    <string name="btnluu">Lưu</string>

    <!--    Start Actitivty-->
    <string name="tienganhbcc">Tiếng Anh BCC</string>
    <string name="hocvoiyt">Học với YTUBE</string>
    <string name="bienvideo">Biến video YTUBE thành bài học riêng</string>
    <string name="btnbatdau">BẮT ĐẦU</string>

    <!--    PlayList of video-->
    <string name="btnXoa">XÓA TẤT CẢ</string>

    <!--    Welcome activity-->
    <string name="welcome">CHÀO MỪNG</string>
    <string name="ungdungtienganh">Ứng dụng học tiếng anh miễn phí</string>

    <!--    Dialog Playlist-->
    <string name="playlist">Danh Sách</string>
    <string name="nameplaylist">Nhập tên</string>
    <string name="btntao">Tạo</string>
    <string name="btnCancel">Thoát</string>

    <!--    Exercise Fragment-->
    <string name="btnEx">BÀI TẬP</string>
    <string name="cauhoi">Câu</string>
    <string name="win">Bạn đã hoàn thành</string>

    <!--    Home Fragment-->
    <string name="chude">CHỦ ĐỀ</string>

    <!--    Search Fragment-->
    <string name="search">Tìm video thích hợp với bạn</string>
    <string name="searchhere">Nhập từ khóa</string>

    <!--    Setting Frament-->
    <string name="thaydoi">Thay đổi ngôn ngữ</string>
    <string name="btnthaydoi">THAY ĐỔI</string>


</resources>