<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_grammar"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_grammar" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_youtube_searched_for_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/menu_playlist" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_excercise" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_info" />
    </group>
</menu>