<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="30dp"-->
<!--        android:paddingLeft="25dp"-->
<!--        android:paddingRight="25dp"-->
<!--        tools:ignore="MissingConstraints">-->
<!--        <TextView-->
<!--            android:id="@+id/t2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/hocvoiyt"-->
<!--            android:textColor="#fff"-->
<!--            android:layout_below="@id/t1"-->
<!--            android:textSize="20dp"-->
<!--            android:letterSpacing="0.04"/>-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/bienvideo"-->
<!--            android:textColor="#fff"-->
<!--            android:layout_below="@id/t2"-->
<!--            android:textSize="20dp"-->
<!--            android:letterSpacing="0.04"/>-->
<!--        <TextView-->
<!--            android:textSize="30dp"-->
<!--            android:fontFamily="sans-serif-black"-->
<!--            android:id="@+id/t1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/nav_header_title"-->
<!--            android:textColor="#fff"/>-->



<!--    </RelativeLayout>-->

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="130dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/letschat" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/hocvoiyt"
        android:textColor="#212121"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/bienvideo"
        android:textColor="#757575"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnGetStart"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/mybutton"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnbatdau"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>